add GetBalancesByGroup
