# ts-server/src/routes.ts
@@ -12,7 +12,7 @@ import {
   connectDatabase,
   rollbackDatabase,
 } from "./lib/database.middleware";
-import { createExpense, getBalancesByUserId, getExpensesByGroup } from "./controllers/expenses";
+import { createExpense, getBalancesByGroupId, getBalancesByUserId, getExpensesByGroup } from "./controllers/expenses";
 
 const router = Router();
 
@@ -29,6 +29,7 @@ router.post("/api/v1/groups/members", continuator(addMember));
 router.get("/api/v1/expenses/:groupId", continuator(getExpensesByGroup));
 router.post("/api/v1/expenses", continuator(createExpense));
 router.get("/api/v1/expenses/balances/:userId", continuator(getBalancesByUserId));
+router.get("/api/v1/expenses/total-balances/:groupId", continuator(getBalancesByGroupId));
 
 // keep this at the end
 router.use(commitDatabase as RequestHandler);
